# human-size-rs

./: .appveyor.yml  .clippy.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  multiples.rs  tests.rs
tests/: serde.rs  tests.rs
