[package]
name = "human-size"
version = "0.1.1"
authors = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
description = """
Sizes for humans.
"""
documentation = "https://docs.rs/human-size"
repository = "https://github.com/Thomasdezeeuw/human-size-rs"
readme = "README.md"
keywords = ["size", "human", "readable"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "Thomasdezeeuw/human-size-rs" }
appveyor = { repository = "Thomasdezeeuw/human-size-rs", service = "github" }
