[package]
name = "human-size"
version = "0.4.1"
authors = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
description = """
Sizes for humans.
"""
documentation = "https://docs.rs/human-size"
repository = "https://github.com/Thomasdezeeuw/human-size-rs"
readme = "README.md"
keywords = ["size", "human", "readable"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "Thomasdezeeuw/human-size-rs" }
appveyor = { repository = "Thomasdezeeuw/human-size-rs", service = "github" }

[dependencies]
serde = { version = "1.0.105", default-features = false, optional = true }

[dev-dependencies]
serde_test = { version = "1.0.105", default-features = false }

[features]
default = []

# Implements `Serialize` and `Deserialize` for `SpecificSize`.
enable-serde = ["serde"]
