[package]
name = "human-size"
version = "0.4.4"
authors = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
description = """
Sizes for humans.
"""
documentation = "https://docs.rs/human-size"
repository = "https://github.com/Thomasdezeeuw/human-size-rs"
readme = "README.md"
keywords = ["size", "human", "readable"]
license = "MIT/Apache-2.0"
edition = "2024"

[dependencies]
serde_core = { version = "1.0.220", default-features = false, optional = true }

[dev-dependencies]
serde_test = { version = "1.0.105", default-features = false }

[features]
default = []

# Implements `Serialize` and `Deserialize` for `SpecificSize`.
enable-serde = ["serde_core"]
